todo_app/overlays/prod/manifests/route_backend_prod.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-backend-route
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todoapp-prod/api
